system/istio/ingress/manifests/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pub-lb
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.byeon.ca"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.byeon.ca"
    tls:
      mode: SIMPLE
      credentialName: byeon-ca-tls
